created base html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,43 @@
     <title>Frontend Mentor Profile Card Challenge</title>
   </head>
   <body>
+    <main>
+      <section class="profile-card-container">
+        <article class="profile-card">
+          <!-- card header -->
+          <div class="profile-card-top">
+            <img
+              src="./images/image-victor.jpg"
+              alt="profile img"
+              class="profile-card-img"
+            />
+            <div class="profile-card-title">
+              <h1 class="profile-card-name">Victor Crest</h1>
+              <p class="profile-card-age">26</p>
+            </div>
+            <p class="profile-card-city">London</p>
+          </div>
+          <!-- card stats -->
+          <div class="profile-card-stats">
+            <!-- single stat -->
+            <div class="stat">
+              <h2 class="stat-number">80K</h2>
+              <p class="stat-title">Followers</p>
+            </div>
+            <!-- single stat -->
+            <div class="stat">
+              <h2 class="stat-number">803K</h2>
+              <p class="stat-title">Likes</p>
+            </div>
+            <!-- single stat -->
+            <div class="stat">
+              <h2 class="stat-number">1.4K</h2>
+              <p class="stat-title">Photos</p>
+            </div>
+          </div>
+        </article>
+      </section>
+    </main>
     <script src="js/main.js"></script>
   </body>
 </html>
