created base scss styles

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <article class="profile-card">
           <!-- card header -->
           <div class="profile-card-top">
+            <div class="profile-card-bg"></div>
             <img
               src="./images/image-victor.jpg"
               alt="profile img"
@@ -20,7 +21,7 @@
             />
             <div class="profile-card-title">
               <h1 class="profile-card-name">Victor Crest</h1>
-              <p class="profile-card-age">26</p>
+              <p class="profile-card-age pl-2">26</p>
             </div>
             <p class="profile-card-city">London</p>
           </div>
