--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
         </article>
       </section>
     </main>
-    <script src="js/main.js"></script>
+    <script
+      type="text/javascript"
+      src="./node_modules/vanilla-tilt/dist/vanilla-tilt.js"
+    ></script>
+    <script type="text/javascript">
+      VanillaTilt.init(document.querySelector(".profile-card"), {
+        max: 10,
+        speed: 300,
+        perspective: 500,
+        glare: true,
+        "max-glare": 0.8,
+      });
+
+      VanillaTilt.init(document.querySelectorAll(".profile-card"));
+    </script>
   </body>
 </html>
