created bg patterns

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
   <body>
     <main>
       <section class="profile-card-container">
+        <!-- bg pattern top -->
+        <img
+          src="./images/bg-pattern-top.svg"
+          class="bg-pattern-top"
+          alt="pattern-top"
+        />
+        <!-- bg pattern bottom -->
+        <img
+          src="./images/bg-pattern-bottom.svg"
+          class="bg-pattern-bottom"
+          alt="pattern bottom"
+        />
         <article class="profile-card">
           <!-- card header -->
           <div class="profile-card-top">
