--- a/index.html
+++ b/index.html
@@ -58,6 +58,22 @@
         </article>
       </section>
     </main>
+    <!-- footer -->
+    <footer class="footer p-1">
+      <h3>
+        /* project for
+        <a
+          href="https://www.frontendmentor.io/challenges/profile-card-component-cfArpWshJ"
+          target="_blank"
+        >
+          frontend mentor</a
+        >
+        coded by
+        <a href="https://github.com/habibdev96" target="_blank">habibdev</a>
+        */
+      </h3>
+      <img src="./images/logo/habibdevgif.gif" alt="logo" />
+    </footer>
     <script
       type="text/javascript"
       src="./node_modules/vanilla-tilt/dist/vanilla-tilt.js"
